--- a/.github/workflows/merge_adjust_transcribe.yml
+++ b/.github/workflows/merge_adjust_transcribe.yml
@@ -1,6 +1,17 @@
 name: 🎧 Merge, Adjust Speed, and Transcribe MP3
 
 on:
+  workflow_call:
+    inputs:
+      env:
+        required: true
+        type: string
+      folder_url:
+        required: true
+        type: string
+      video_number:
+        required: true
+        type: string
   workflow_dispatch:
     inputs:
       env:
