--- a/sampleConfig/CONFIG_JSON.json
+++ b/sampleConfig/CONFIG_JSON.json
@@ -7,7 +7,8 @@
   "resolution": "1080p",
   "config_key": "onyxShadowingEnglish",
   "upload_video_to_drive": "false",
-  "upload_to_youtube": "true",
+  "upload_slide_to_drive": "true",
+  "upload_to_youtube": "false",
   "maxChar": "200",
   "minChar": "100",
   "matchThreshold": "85",
