--- a/.github/workflows/process-from-drive.yml
+++ b/.github/workflows/process-from-drive.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: "📩 Notify: Start processing video"
         run: |
-          export MESSAGE="🎬 Channel [$CHANNEL] Video #$VIDEO_NUMBER: Start 🎞 Process from Google Drive and Generate Slides + Video and Upload to YouTube !"
+          export MESSAGE="▶️ [$CHANNEL] Video #$VIDEO_NUMBER: Start 🎞 Process from Google Drive and Generate Slides + Video and Upload to YouTube !"
           node scripts/send_telegram_message.js
 
       - name: ✅ Validate CONFIG_JSON content
