--- a/.github/workflows/full-video-process.yml
+++ b/.github/workflows/full-video-process.yml
@@ -12,6 +12,7 @@ on:
           - ose
           - mep
           - dde
+          - kunzyPE
       folder_url:
         description: "Google Drive folder URL"
         required: true
