feat: add volume adjustment option via CONFIG_JSON for audio processing
- Parse new 'volume' parameter from CONFIG_JSON with default 1.0
- Update ffmpeg command to apply both atempo (speed) and volume filters
- Allow dynamic control of audio volume in the workflow pipeline

--- a/.github/workflows/merge_adjust_transcribe.yml
+++ b/.github/workflows/merge_adjust_transcribe.yml
@@ -65,6 +65,7 @@ jobs:
           echo "SPEED=$(jq -r '.speed' config.json)" >> $GITHUB_ENV
           echo "MAX_WORDS_PER_LINE=$(jq -r '.max_words_per_line' config.json)" >> $GITHUB_ENV
           echo "LANGUAGE=$(jq -r '.language' config.json)" >> $GITHUB_ENV
+          echo "VOLUME=$(jq -r '.volume // 1.0' config.json)" >> $GITHUB_ENV
 
       - name: 🐍 Install Python & Google API packages
         run: pip install google-auth google-api-python-client
@@ -99,11 +100,10 @@ jobs:
           done < merged/sorted.txt
           ffmpeg -f concat -safe 0 -i merged/list.txt -c copy merged/merged.mp3
 
-      - name: 🐢 Điều chỉnh tốc độ audio
+      - name: 🐢 Điều chỉnh tốc độ & âm lượng audio
         run: |
           mkdir -p adjusted
-          ffmpeg -i merged/merged.mp3 -filter:a "atempo=$SPEED" -vn adjusted/audio_adjusted.mp3
-
+          ffmpeg -i merged/merged.mp3 -filter:a "atempo=$SPEED,volume=$VOLUME" -vn adjusted/audio_adjusted.mp3
       - name: ✍️ Tạo phụ đề SRT
         run: |
           whisper adjusted/audio_adjusted.mp3 \
