ci: split “Process from Google Drive” pipeline into two dedicated workflows
### Why
- Improve maintainability and rerun flexibility
- Avoid installing heavy video deps when we only need slides
- Enable independent triggering of render/upload stage

### What
1. **01‑generate‑slides.yml**
   • Generates `timings.json` → `slides.pptx`
   • Uploads slide to Google Drive and sends Telegram notice

2. **02‑render‑video.yml**
   • Downloads slide/audio assets
   • Converts PPTX → PNG, renders `output.mp4`
   • Optional uploads to Drive & YouTube + Telegram notice

### Notes
- Environment/secret variables kept intact to minimise breaking changes
- LibreOffice/ffmpeg removed from slide job → faster CI runtime
- Added failure notifications to both jobs

--- a/.github/workflows/01-generate-slides.yml
+++ b/.github/workflows/01-generate-slides.yml
@@ -16,7 +16,8 @@ jobs:
   make-slides:
     name: "Slides | ${{ inputs.env }} | #${{ inputs.video_number }}"
     runs-on: ubuntu-latest
-    environment: { name: ${{ inputs.env }} }
+    environment:
+      name: ${{ inputs.env }}
 
     env:
       FOLDER_URL:         ${{ inputs.folder_url }}
