--- a/.github/workflows/01-generate-slides.yml
+++ b/.github/workflows/01-generate-slides.yml
@@ -27,6 +27,8 @@ jobs:
       GG_REFRESH_TOKEN:   ${{ secrets.GG_REFRESH_TOKEN }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
+      YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
+      YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
 
     steps:
       - name: 📅 Checkout source code
