--- a/.github/workflows/02-render-video.yml
+++ b/.github/workflows/02-render-video.yml
@@ -76,6 +76,9 @@ jobs:
           pip install --upgrade google-api-python-client google-auth google-auth-oauthlib
           sudo apt-get update
           sudo apt-get install -y libreoffice poppler-utils ffmpeg
+      - name: "🌟 Install font"
+        run: |
+          mkdir -p ~/.fonts && cp assets/fonts/*.ttf ~/.fonts/ && fc-cache -f -v
 
       - name: 📂 Download files (slides + audio + timing + background)
         run: |
