--- a/.github/workflows/full-video-process.yml
+++ b/.github/workflows/full-video-process.yml
@@ -33,7 +33,7 @@ jobs:
   process_from_drive:
     name: "process_from_drive ${{ inputs.env }} | Video: #${{ inputs.video_number }}"
     needs: merge_adjust_transcribe
-    uses: ./.github/workflows/process-video-with-intro.yml.yml
+    uses: ./.github/workflows/process-video-with-intro.yml
     with:
       env: ${{ inputs.env }}
       folder_url: ${{ inputs.folder_url }}
