--- a/.github/workflows/full-video-process.yml
+++ b/.github/workflows/full-video-process.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   merge_adjust_transcribe:
     name: "merge_adjust_transcribe ${{ inputs.env }} | Video: #${{ inputs.video_number }}"
-    uses: ./.github/workflows/merge_adjust_transcribe.yml
+    uses: ./.github/workflows/1.1process-audio.yml
     with:
       env: ${{ inputs.env }}
       folder_url: ${{ inputs.folder_url }}
@@ -33,7 +33,7 @@ jobs:
   process_from_drive:
     name: "process_from_drive ${{ inputs.env }} | Video: #${{ inputs.video_number }}"
     needs: merge_adjust_transcribe
-    uses: ./.github/workflows/process-video-with-intro.yml
+    uses: ./.github/workflows/1.2process-video.yml
     with:
       env: ${{ inputs.env }}
       folder_url: ${{ inputs.folder_url }}
